Added IComponent interface to all sensors and controllers

--- a/kervi_ui/web/src/app/page-header/page-header.component.html
+++ b/kervi_ui/web/src/app/page-header/page-header.component.html
@@ -14,7 +14,7 @@
 			</div>
 		</li>
 		<li class="nav-item">
-			<a class="btn btn-default" (click)="toggleControllers()"><i class="fa fa-gamepad fa-2x" aria-hidden="true"></i></a>
+			<a class="btn btn-default" (click)="toggleControllers()"><i class="fa fa-slider fa-2x" aria-hidden="true"></i></a>
 		</li>
 		<li class="nav-item core-sensors">
 			<core-sensors></core-sensors>
