--- a/kervi_ui/web/src/app/dashboards/dashboard/dashboard.component.html
+++ b/kervi_ui/web/src/app/dashboards/dashboard/dashboard.component.html
@@ -4,4 +4,7 @@
 <div *ngIf="dashboard && dashboard.template">
   <dashboard-layout [dashboard]="dashboard"></dashboard-layout>
 </div>
+<div *ngIf="dashboard && !dashboard.template">
+  
+</div>
 <kervi-controllers [dashboardType]="'dashboard'" [dashboard]="dashboardId"></kervi-controllers>
