--- a/kervi_ui/web/src/app/controllers/controller/controller.component.html
+++ b/kervi_ui/web/src/app/controllers/controller/controller.component.html
@@ -8,26 +8,29 @@
 			fsdf
 		</template>
 		<template ngSwitchDefault>
-			<div *ngFor="let component of controller.components">
-				<div [ngSwitch]="component.type">
-					<template ngSwitchCase="number-input">
-						<kervi-controller-number-input [dashboardType]="dashboardType" [input]="component"></kervi-controller-number-input>
-					</template>
-          <template ngSwitchCase="text-input">
-						<kervi-controller-text-input [dashboardType]="dashboardType" [input]="component"></kervi-controller-text-input>
-					</template>
-          <template ngSwitchCase="button">
-						<kervi-controller-button [dashboardType]="dashboardType" [button]="component"></kervi-controller-button>
-					</template>
-					<template ngSwitchCase="switchButton">
-						<kervi-controller-switchbutton [dashboardType]="dashboardType" [button]="component"></kervi-controller-switchbutton>
-					</template>
-          <template ngSwitchCase="select">
-						<kervi-controller-select [dashboardType]="dashboardType" [select]="component"></kervi-controller-select>
-					</template>
-          <template ngSwitchCase="datetime">
-						<kervi-controller-datetime [dashboardType]="dashboardType" [datetime]="component"></kervi-controller-datetime>
-					</template>
+			<kervi-cam-viewer *ngIf="controller.type=='camera'" [cameraId]="controller.id"></kervi-cam-viewer>
+  		<div *ngFor="let component of controller.components">
+				<div *ngIf="component.visible">
+					<div [ngSwitch]="component.type">
+						<template ngSwitchCase="number-input">
+							<kervi-controller-number-input [dashboardType]="dashboardType" [input]="component"></kervi-controller-number-input>
+						</template>
+						<template ngSwitchCase="text-input">
+							<kervi-controller-text-input [dashboardType]="dashboardType" [input]="component"></kervi-controller-text-input>
+						</template>
+						<template ngSwitchCase="button">
+							<kervi-controller-button [dashboardType]="dashboardType" [button]="component"></kervi-controller-button>
+						</template>
+						<template ngSwitchCase="switchButton">
+							<kervi-controller-switchbutton [dashboardType]="dashboardType" [button]="component"></kervi-controller-switchbutton>
+						</template>
+						<template ngSwitchCase="select">
+							<kervi-controller-select [dashboardType]="dashboardType" [select]="component"></kervi-controller-select>
+						</template>
+						<template ngSwitchCase="datetime">
+							<kervi-controller-datetime [dashboardType]="dashboardType" [datetime]="component"></kervi-controller-datetime>
+						</template>
+					</div>
 				</div>
 			</div>
 
