--- a/kervi_ui/web/src/app/dashboards/dashboard-section/dashboard-section.component.html
+++ b/kervi_ui/web/src/app/dashboards/dashboard-section/dashboard-section.component.html
@@ -1,7 +1,6 @@
 <div *ngIf="!inline && section.components.length>0" class="card">
     <div class="card-block">
         <div *ngFor="let sectionComponent of section.components">
-            
             <controller [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='controller'" ></controller>
             <controller-component [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters"  *ngIf="sectionComponent.component.componentType=='controllerComponent'" ></controller-component>
             <sensor [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='sensor'" ></sensor>
@@ -9,12 +8,10 @@
     </div>
 </div>
 
-<div *ngIf="inline && section.components.length>0" >
-        <div *ngFor="let sectionComponent of section.components">
-            
+<div *ngIf="inline && section.components.length>0" style="display:inline-block">
+        <div *ngFor="let sectionComponent of section.components" style="display:inline-block">
             <controller [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='controller'" ></controller>
             <controller-component [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters"  *ngIf="sectionComponent.component.componentType=='controllerComponent'" ></controller-component>
-            <sensor [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='sensor'" ></sensor>
+            <sensor [dashboardSection]="section" [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='sensor'" ></sensor>
         </div>
-    
 </div>
