--- a/kervi_ui/web/src/app/controllers/controller-layout/controller-component.component.html
+++ b/kervi_ui/web/src/app/controllers/controller-layout/controller-component.component.html
@@ -1,22 +1,22 @@
 <div *ngIf="component.visible">
     <div [ngSwitch]="component.type">
         <template ngSwitchCase="number-input">
-            <kervi-controller-number-input [dashboardType]="dashboardType" [input]="component"></kervi-controller-number-input>
+            <kervi-controller-number-input [dashboardSection]="dashboardSection" [input]="component"></kervi-controller-number-input>
         </template>
         <template ngSwitchCase="text-input">
-            <kervi-controller-text-input [dashboardType]="dashboardType" [input]="component"></kervi-controller-text-input>
+            <kervi-controller-text-input [dashboardSection]="dashboardSection" [input]="component"></kervi-controller-text-input>
         </template>
         <template ngSwitchCase="button">
-            <kervi-controller-button [dashboardType]="dashboardType" [button]="component"></kervi-controller-button>
+            <kervi-controller-button [dashboardSection]="dashboardSection" [button]="component"></kervi-controller-button>
         </template>
         <template ngSwitchCase="switchButton">
-            <kervi-controller-switchbutton [dashboardType]="dashboardType" [button]="component"></kervi-controller-switchbutton>
+            <kervi-controller-switchbutton [dashboardSection]="dashboardSection" [button]="component"></kervi-controller-switchbutton>
         </template>
         <template ngSwitchCase="select">
-            <kervi-controller-select [dashboardType]="dashboardType" [select]="component"></kervi-controller-select>
+            <kervi-controller-select [dashboardSection]="dashboardSection" [select]="component"></kervi-controller-select>
         </template>
         <template ngSwitchCase="datetime-input">
-            <kervi-controller-datetime [dashboardType]="dashboardType" [datetime]="component"></kervi-controller-datetime>
+            <kervi-controller-datetime [dashboardSection]="dashboardSection" [datetime]="component"></kervi-controller-datetime>
         </template>
     </div>
 </div>
