--- a/kervi_ui/web/src/app/dashboards/dashboard-layout/layout-controller.component.html
+++ b/kervi_ui/web/src/app/dashboards/dashboard-layout/layout-controller.component.html
@@ -1,1 +1,1 @@
-<kervi-controller [dashboardSection]="dashboardSection" [controller]="controller"></kervi-controller>
+<kervi-controller [parameters]="parameters" [dashboardSection]="dashboardSection" [controller]="controller"></kervi-controller>
