--- a/kervi_ui/web/src/app/controllers/cam-viewer/cam-viewer.component.html
+++ b/kervi_ui/web/src/app/controllers/cam-viewer/cam-viewer.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="isBackground">
-	<div id="video-viewer" class="video" style="position:relative">
-		<img id="camImage" src="{{(cameraSource$ | async)}}" style="position:absolute;top:0px;left:0px;height:100%;width:100%">
+<ng-container *ngIf="isBackground">
+	<div id="video-viewer" class="video" style="positionx:relative;width:100%;">
+		<img class="camImage" src="{{(cameraSource$ | async)}}" style="width:100%">
 		<canvas id="camCanvas" style="position:absolute;top:0px;left:0px;width:100%;height:100%"></canvas>
 		<div class="cam-pad-area">
 			<fieldset id="camPad" class="pad" data-width="180" data-height="180">
@@ -9,8 +9,9 @@
 			</fieldset>
 		</div>
 	</div>
-</div>
-<div *ngIf="!isBackground">
+</ng-container>
+
+<ng-container *ngIf="!isBackground">
 	<div id="video-viewer" class="video" style="position:relative">
 		<img id="camImage" src="{{(cameraSource$ | async)}}" style="positionx:absolute;top:0px;left:0px;height:100%;width:100%">
 		<canvas id="camCanvas" style="position:absolute;top:0px;left:0px;width:100%;height:100%"></canvas>
@@ -21,4 +22,4 @@
 			</fieldset>
 		</div>
 	</div>
-</div>
+</ng-container>
