--- a/kervi_ui/web/src/app/dashboards/dashboard/dashboard.component.html
+++ b/kervi_ui/web/src/app/dashboards/dashboard/dashboard.component.html
@@ -1,26 +1,26 @@
-<nav class="navbar navbar-fixed-to navbar-light bg-faded page-header">
+<nav class="navbar navbar-fixed-top navbar-light bg-faded page-header">
 	<ul class="nav navbar-nav">
     <app-page-header></app-page-header>
 		<li class="nav-item">
-			<a class="btn btn-default" (click)="toggleControllers()"><i class="fa fa-slider fa-2x" aria-hidden="true"></i></a>
+			<a class="btn btn-default" (click)="dashboardSectionsHidden = !dashboardSectionsHidden;"><i class="fa fa-slider fa-2x" aria-hidden="true"></i>{{dashboardSectionsVisible}}</a>
 		</li>
 		<li *ngIf="dashboard.sysSection" class="nav-item core-sensors" style="float:right">
 			<kervi-dashboard-section [inline]="true" [section]="dashboard.sysSection" ></kervi-dashboard-section>
 		</li>
 	</ul>
 </nav>
-<div class="container">
-<div *ngIf="dashboard && dashboard.template">
-  <dashboard-layout [dashboard]="dashboard"></dashboard-layout>
-</div>
-<div *ngIf="dashboard && !dashboard.template">
-  <kervi-cam-viewer *ngIf="dashboard.background.type=='camera'" [isBackground]="true" [cameraId]="dashboard.background.cameraId"></kervi-cam-viewer>
-  <div class="card-columns">
-    <kervi-dashboard-section *ngFor="let section of dashboard.sections" [section]="section"></kervi-dashboard-section>
-  </div>  
-</div>
-<footer class="footer">
-	<kervi-dashboard-section *ngIf="dashboard.footerSection" [section]="dashboard.footerSection"></kervi-dashboard-section>
-</footer>
 
+<ng-container *ngIf="dashboard && dashboard.template">
+	<dashboard-layout [dashboard]="dashboard"></dashboard-layout>
+</ng-container>
+<div *ngIf="dashboard && !dashboard.template" style="position:relative">
+	<kervi-cam-viewer *ngIf="dashboard.background.type=='camera'" [isBackground]="true" [cameraId]="dashboard.background.cameraId"></kervi-cam-viewer>
+	<div class="container" style="position:absolute;top:0;z-index:2000" >
+		<div class="card-columns" [class.dashboard-sections-hidden]="dashboardSectionsHidden">
+			<kervi-dashboard-section *ngFor="let section of dashboard.sections" [section]="section"></kervi-dashboard-section>
+		</div>  
+	</div>
+  <footer class="footer">
+		<kervi-dashboard-section *ngIf="dashboard.footerSection" [section]="dashboard.footerSection"></kervi-dashboard-section>
+	</footer>
 </div>
