--- a/kervi_ui/web/src/styles.css
+++ b/kervi_ui/web/src/styles.css
@@ -98,6 +98,8 @@
 }
 
 
+
+
 .ctrl-tabs{
 	/*background:rgba(255,255,255,.5);*/
 }
@@ -161,3 +163,7 @@
 	border-radius:0;
 }
 
+bodyx {
+  min-height: 75rem;
+  padding-top: 4.5rem;
+}
