Update sensor styling

--- a/kervi_ui/web/src/styles.scss
+++ b/kervi_ui/web/src/styles.scss
@@ -14,13 +14,24 @@ $brand-info:                #5bc0de !default;
 $brand-warning:             #f0ad4e !default;
 $brand-danger:              #d9534f !default;
 
-$input-group-addon-bg:           #00ff00;// $gray-lighter !default;
-$input-group-addon-border-color: #0000ff;// !default;
+$input-group-addon-bg:           #116611;// $gray-lighter !default;
+$input-group-addon-border-color: #116611;// !default;
 
 $card-cap-bg:              #004400 !default;
 $card-bg:                  #88cc88 !default;
 
 $card-link-hover-color:    #fff !default;
+
+$gray-lightest:             #55aa55 !default;
+
+$navbar-light-color:                #55aa55 !default;
+$navbar-light-hover-color:          rgba(0,0,0,.7) !default;
+$navbar-light-active-color:         rgba(0,0,0,.9) !default;
+$navbar-light-disabled-color:       rgba(0,0,0,.3) !default;
+
+$body-bg:    #2d882d !default;
+
+
 
 
 
