--- a/kervi_ui/web/src/app/controllers/cam-viewer/cam-viewer.component.html
+++ b/kervi_ui/web/src/app/controllers/cam-viewer/cam-viewer.component.html
@@ -3,7 +3,7 @@
 		<img class="camImage" src="{{(cameraSource$ | async)}}" style="width:100%">
 		<canvas id="camCanvas" style="position:absolute;top:0px;left:0px;width:100%;height:100%"></canvas>
 		<div class="cam-pad-area">
-			<fieldset id="camPad" class="pad" data-width="180" data-height="180">
+			<fieldset id="camPad" class="pad" [attr.data-width]="padSize" [attr.data-height]="padSize">
 				<legend></legend>
 				pan : <input id="cam-servo-pan" name="x" value="0"> tilt : <input id="cam-servo-tilt" name="y" value="0">
 			</fieldset>
@@ -12,11 +12,11 @@
 </ng-container>
 
 <ng-container *ngIf="!isBackground">
-	<div id="video-viewer" class="video" style="position:relative">
-		<img id="camImage" src="{{(cameraSource$ | async)}}" style="positionx:absolute;top:0px;left:0px;height:100%;width:100%">
+	<div id="video-viewer" class="video" style="position:relative;width:100%">
+		<img class="camImage" src="{{(cameraSource$ | async)}}" style="positionx:absolute;top:0px;left:0px;height:100%;width:100%">
 		<canvas id="camCanvas" style="position:absolute;top:0px;left:0px;width:100%;height:100%"></canvas>
 		<div class="cam-pad-area" style="position:absolute">
-			<fieldset id="camPad" style="position:absolute" class="pad" data-width="180" data-height="180">
+			<fieldset id="camPad" style="position:absolute" class="pad" [attr.data-width]="padSize" [attr.data-height]="padSize">
 				<legend></legend>
 				pan : <input id="cam-servo-pan" name="x" value="0"> tilt : <input id="cam-servo-tilt" name="y" value="0">
 			</fieldset>
