--- a/kervi_ui/web/src/styles.scss
+++ b/kervi_ui/web/src/styles.scss
@@ -33,7 +33,56 @@ $body-bg:    #2d882d !default;
 
 
 
+.sensor-template{
+	background:rgba(128,128,128,0);
+	color:#ff0000;
 
+	.sensor-warning{
+		color:rgba(255, 166, 24, .5);
+	}
+
+	.sensor-fatal{
+		color:rgba(255, 35, 46, .5);
+	}
+
+	.sensor-major-ticks{
+		color:#f5f5f5;
+	}
+
+	.sensor-minor-ticks{
+		color:#ddd;
+	}
+
+	.sensor-title{
+		color:#fff;
+	}
+
+	.sensor-units{
+		color:#ddd;
+	}
+
+	.sensor-numbers{
+		color:#eee;
+	}
+
+	.sensor-needle-start{
+		color:rgba(240, 128, 128, 1);
+	}
+
+	.sensor-needle-end{
+		color:rgba(255, 160, 122, .9);
+	}
+
+	.sensor-bar{
+		color:#55aa55;
+	}
+
+	.sensor-bar-progress{
+		color:#116611;
+	}
+
+	
+}
 
 
 /*#video-viewer{
