--- a/kervi_ui/web/src/styles.scss
+++ b/kervi_ui/web/src/styles.scss
@@ -30,7 +30,7 @@ $navbar-light-active-color:         rgba(0,0,0,.9) !default;
 $navbar-light-disabled-color:       rgba(0,0,0,.3) !default;
 
 $body-bg:    #2d882d !default;
-
+$body-color: #fff !default;
 
 
 .sensor-template{
