--- a/kervi_ui/web/src/app/dashboards/dashboard-section/dashboard-section.component.html
+++ b/kervi_ui/web/src/app/dashboards/dashboard-section/dashboard-section.component.html
@@ -1,9 +1,9 @@
-<div *ngIf="!inline && section.components.length>0" class="card" [style.width]="sectionWidth">
+<div *ngIf="!inline" [ngClass]="{'has-card-header': showHeader}"  class="card {{sectionClassWidth}}">
     <div class="card-header" *ngIf="showHeader">
         
-        <a data-toggle="collapse" role="tab" href="#section-{{section.id}}" aria-expanded="false" aria-control="" style="float:left"> > </a>
+        <a data-toggle="collapse" role="tab" href="#section-{{section.id}}" aria-expanded="true" aria-control="" style="float:left"> > </a>
         <span style="float:left">{{title}}</span>
-        <div class="card-block" *ngIf="headerComponents.length>0" style="float:right" >
+        <div class="card-block" *ngIf="headerComponents.length>0" style="float:right;padding:0"    >
             <ng-container *ngFor="let sectionComponent of headerComponents">
                 <controller [dashboardSection]="section" [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='controller'" ></controller>
                 <controller-component [dashboardSection]="section" [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters"  *ngIf="sectionComponent.component.componentType=='controllerComponent'" ></controller-component>
@@ -11,16 +11,37 @@
             </ng-container>
         </div>
   </div>
-    <div id="section-{{section.id}}" role="tabcard" class="collapse" *ngIf="showHeader">
-        <div class="card-block" >
+    <div id="section-{{section.id}}" role="tabpanel" class="collapse show  {{sectionClassHeight}} " *ngIf="showHeader" style="overflow:auto">
+        <div class="card-block" *ngIf="components.length>0" >
             <ng-container *ngFor="let sectionComponent of components">
                 <controller [dashboardSection]="section" [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='controller'" ></controller>
                 <controller-component [dashboardSection]="section" [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters"  *ngIf="sectionComponent.component.componentType=='controllerComponent'" ></controller-component>
                 <sensor [dashboardSection]="section" [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='sensor'" ></sensor>
             </ng-container>
         </div>
+        
+        <div class="card-block" *ngIf="section.parameters.userLog"  >
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>&nbsp;</th>
+                    <th>Time</th>
+                    <th>topic</th>
+                </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let message of messages">
+                        <td></td>
+                        <td>{{message.timestamp | date: 'HH:mm:ss'}}</td>
+                        <td>{{message.topic}}</td>
+                    </tr>
+                </tbody>
+            </table>
+            
+        </div>    
     </div>
-    <div class="card-block" *ngIf="!showHeader" >
+    
+    <div class="card-block {{sectionClassHeight}} " *ngIf="!showHeader" style="overflow:auto">
         <ng-container *ngFor="let sectionComponent of components">
             <controller [dashboardSection]="section" [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='controller'" ></controller>
             <controller-component [dashboardSection]="section" [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters"  *ngIf="sectionComponent.component.componentType=='controllerComponent'" ></controller-component>
