--- a/kervi_ui/web/src/app/controllers/cam-viewer/cam-viewer.component.html
+++ b/kervi_ui/web/src/app/controllers/cam-viewer/cam-viewer.component.html
@@ -2,7 +2,7 @@
 	<div id="video-viewer" class="video" style="positionx:relative;width:100%;">
 		<img class="camImage" src="{{(cameraSource$ | async)}}" style="width:100%">
 		<canvas id="camCanvas" style="position:absolute;top:0px;left:0px;width:100%;height:100%"></canvas>
-		<div class="cam-pad-area">
+		<div class="cam-pad-area" style="display:none">
 			<fieldset id="camPad" class="pad" [attr.data-width]="padSize" [attr.data-height]="padSize">
 				<legend></legend>
 				pan : <input id="cam-servo-pan" name="x" value="0"> tilt : <input id="cam-servo-tilt" name="y" value="0">
