--- a/kervi_ui/web/src/app/dashboards/dashboard-section/dashboard-section.component.html
+++ b/kervi_ui/web/src/app/dashboards/dashboard-section/dashboard-section.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="!inline" [ngClass]="{'has-card-header': showHeader}"  class="card {{sectionClassWidth}}">
     <div class="card-header" *ngIf="showHeader">
         
-        <a data-toggle="collapse" role="tab" href="#section-{{section.id}}" aria-expanded="true" aria-control="" style="float:left"> > </a>
-        <span style="float:left">{{title}}</span>
+        <a data-toggle="collapse" role="tab" href="#section-{{section.id}}" [attr.aria-expanded]="expanded" aria-control="" style="float:left"> <i class="fa fa-chevron-right" aria-hidden="true"></i> </a>
+        <span style="float:right">{{title}}</span>
         <div class="card-block" *ngIf="headerComponents.length>0" style="float:right;padding:0"    >
             <ng-container *ngFor="let sectionComponent of headerComponents">
                 <controller [dashboardSection]="section" [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='controller'" ></controller>
@@ -11,7 +11,7 @@
             </ng-container>
         </div>
   </div>
-    <div id="section-{{section.id}}" role="tabpanel" class="collapse show  {{sectionClassHeight}} " *ngIf="showHeader" style="overflow:auto">
+    <div id="section-{{section.id}}" role="tabpanel" [ngClass]="{'in': expanded}" class="collapse  {{sectionClassHeight}} " *ngIf="showHeader" style="overflow:auto">
         <div class="card-block" *ngIf="components.length>0" >
             <ng-container *ngFor="let sectionComponent of components">
                 <controller [dashboardSection]="section" [id]="sectionComponent.componentId" [parameters]="sectionComponent.parameters" *ngIf="sectionComponent.component.componentType=='controller'" ></controller>
