--- a/kervi_ui/web/src/app/page-header/page-header.component.html
+++ b/kervi_ui/web/src/app/page-header/page-header.component.html
@@ -1,14 +1,14 @@
 <li class="nav-item dropdown">
-	<a class="nav-link dropdown-toggl" data-toggle="dropdown"><i class="fa fa-bars fa-lg" aria-hidden="true"></i></a>
+	<a class="nav-link " data-toggle="dropdown"><i class="fa fa-bars fa-lg" aria-hidden="true"></i></a>
 	<div class="dropdown-menu  multi-leve ul.nav.navbar-nav.no-collapse">
-			<span class="dropdown-divider">&nbsp; Dashboards</span>
+			<!--<span class="dropdown-divider">&nbsp; Dashboards</span>-->
 			<div class="dropdown-submenu">
 					<a *ngFor="let dashboard of (dashboards$ | async)" class="dropdown-item" [routerLink]="['/dashboard', dashboard.id]">{{dashboard.name}}</a>
 			</div>
-		<div class="dropdown-divider"></div>
-		<a class="dropdown-item" href="#/charts">Charts</a>
-		<a class="dropdown-item" href="#/about">About</a>
-		<a class="dropdown-item" href="#/settings">Settings</a>
+		<!--<div class="dropdown-divider"></div>-->
+		<!--<a class="dropdown-item" href="#/charts">Charts</a>-->
+		<!--<a class="dropdown-item" href="#/about">About</a>-->
+		<!--<a class="dropdown-item" href="#/settings">Settings</a>-->
 	</div>
 </li>
 		
