fix style issue

--- a/kervi_ui/web/src/styles.scss
+++ b/kervi_ui/web/src/styles.scss
@@ -38,7 +38,8 @@ $body-color: #fff !default;
 
 .sparkline-template{
 	color:#004400;
-	background:#55aa55;
+	background-color:#55aa55;
+	height:20;
 	.spot{
 		color:#116611;
 	}
