--- a/kervi_ui/web/src/app/connect/connect.component.html
+++ b/kervi_ui/web/src/app/connect/connect.component.html
@@ -1,3 +1,5 @@
-<p>
-  connecting, please wait!
+<p style="width:300px;height:300px;background:rgba(255,255,255,0.5);border-radius: 3px;margin-right:auto;margin-left:auto">
+  
+  <img src="kervi_logo.png" >
+
 </p>
