--- a/kervi_ui/web/src/app/controllers/controller-layout/controller-component.component.html
+++ b/kervi_ui/web/src/app/controllers/controller-layout/controller-component.component.html
@@ -7,10 +7,10 @@
             <kervi-controller-text-input [parameters]="parameters" [dashboardSection]="dashboardSection" [input]="component"></kervi-controller-text-input>
         </template>
         <template ngSwitchCase="button">
-            <kervi-controller-button [dashboardSection]="dashboardSection" [button]="component"></kervi-controller-button>
+            <kervi-controller-button [dashboardSection]="dashboardSection" [parameters]="parameters" [button]="component"></kervi-controller-button>
         </template>
         <template ngSwitchCase="switchButton">
-            <kervi-controller-switchbutton [dashboardSection]="dashboardSection" [button]="component"></kervi-controller-switchbutton>
+            <kervi-controller-switchbutton [dashboardSection]="dashboardSection" [parameters]="parameters" [button]="component"></kervi-controller-switchbutton>
         </template>
         <template ngSwitchCase="select">
             <kervi-controller-select [dashboardSection]="dashboardSection" [select]="component"></kervi-controller-select>
