--- a/kervi_ui/web/src/app/controllers/controller-layout/controller-component.component.html
+++ b/kervi_ui/web/src/app/controllers/controller-layout/controller-component.component.html
@@ -6,9 +6,9 @@
         <template ngSwitchCase="text-input">
             <kervi-controller-text-input [parameters]="parameters" [dashboardSection]="dashboardSection" [input]="component"></kervi-controller-text-input>
         </template>
-        <template ngSwitchCase="button">
+        <ng-container *ngSwitchCase="button">
             <kervi-controller-button [dashboardSection]="dashboardSection" [parameters]="parameters" [button]="component"></kervi-controller-button>
-        </template>
+        </ng-container>
         <template ngSwitchCase="switchButton">
             <kervi-controller-switchbutton [dashboardSection]="dashboardSection" [parameters]="parameters" [button]="component"></kervi-controller-switchbutton>
         </template>
