--- a/kervi_ui/web/src/app/controllers/controller-switchbutton/controller-switchbutton.component.html
+++ b/kervi_ui/web/src/app/controllers/controller-switchbutton/controller-switchbutton.component.html
@@ -1,1 +1,1 @@
-<input type="checkbox" [attr.checked]="(button.state$ | async) ? '' : null" data-togglex="toggle">
+<input type="checkbox" [attr.checked]="(button.state$ | async) ? '' : null" data-toggle="toggle">
