fixed issues missing package

--- a/kervi_ui/web/src/styles.scss
+++ b/kervi_ui/web/src/styles.scss
@@ -31,6 +31,8 @@ $navbar-light-disabled-color:       rgba(0,0,0,.3) !default;
 
 $body-bg:    #2d882d !default;
 $body-color: #fff !default;
+$border-radius-base: .25rem;
+
 
 .container{
 	width:100%;
