--- a/kervi_ui/web/src/app/sensors/sensor/sensor.component.html
+++ b/kervi_ui/web/src/app/sensors/sensor/sensor.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="displayType=='value'" class="sensor-inline sensor-type-value">
-	{{sensor.name}}:
+	<ng-container *ngIf="displayTitle">{{sensor.name}}:</ng-container>
 	<i *ngIf="currentIcon" class="fa fa-{{currentIcon}}"></i>
 	<sensor-sparkline *ngIf="showSparkline" [sensor]="sensor"></sensor-sparkline>
 	<span class="sensor-value">{{(sensor.value$ | async)}}{{sensor.unit}}</span>
