--- a/kervi_ui/web/src/styles.scss
+++ b/kervi_ui/web/src/styles.scss
@@ -38,6 +38,11 @@ $border-radius-base: .25rem;
 	width:100%;
 }
 
+
+.block-component{
+	width:100%;
+}
+
 .sparkline-template{
 	color:#004400;
 	background-color:#55aa55;
