--- a/kervi_ui/web/src/app/controllers/cam-viewer/cam-viewer.component.html
+++ b/kervi_ui/web/src/app/controllers/cam-viewer/cam-viewer.component.html
@@ -1,7 +1,8 @@
 <ng-container *ngIf="isBackground">
 	<div id="video-viewer" class="video" style="positionx:relative;width:100%;">
-		<img class="camImage" src="{{(cameraSource$ | async)}}" style="width:100%">
+		<img (load)="imageReady()" class="camImage" src="{{(cameraSource$ | async)}}" style="width:100%">
 		<canvas id="camCanvas" style="position:absolute;top:0px;left:0px;width:100%;height:100%"></canvas>
+		<canvas id="poiCanvas" style="position:absolute;top:0px;left:0px;width:100%;height:100%"></canvas>
 		<div class="cam-pad-area" style="display:none">
 			<fieldset id="camPad" class="pad" [attr.data-width]="padSize" [attr.data-height]="padSize">
 				<legend></legend>
@@ -13,8 +14,9 @@
 
 <ng-container *ngIf="!isBackground">
 	<div id="video-viewer" class="video" style="position:relative;width:100%">
-		<img class="camImage" src="{{(cameraSource$ | async)}}" style="positionx:absolute;top:0px;left:0px;height:100%;width:100%">
+		<img (load)="imageReady()" class="camImage" src="{{(cameraSource$ | async)}}" style="positionx:absolute;top:0px;left:0px;height:100%;width:100%">
 		<canvas id="camCanvas" style="position:absolute;top:0px;left:0px;width:100%;height:100%"></canvas>
+		<canvas id="poiCanvas" style="position:absolute;top:0px;left:0px;width:100%;height:100%"></canvas>
 		<div class="cam-pad-area" style="position:absolute">
 			<fieldset id="camPad" style="position:absolute" class="pad" [attr.data-width]="padSize" [attr.data-height]="padSize">
 				<legend></legend>
