--- a/kervi_ui/web/src/app/controllers/controller-text-input/controller-text-input.component.html
+++ b/kervi_ui/web/src/app/controllers/controller-text-input/controller-text-input.component.html
@@ -1,1 +1,10 @@
-<input class="form-control" (change)="onChange($event)" name="{{input.id}}" value="{{(input.value$ | async)}}"/>
+<div *ngIf="parameters.size==0 && !parameters.inline"   class="block-component">
+	<span  *ngIf="parameters.labelIcon" class="fa fa-{{parameters.labelIcon}}"></span>
+    <span *ngIf="parameters.label">{{parameters.label}}</span>
+    <input class="form-control pull-right" [style.width.%]="parameters.inputSize" (keyup)="onChange($event)" name="{{input.id}}" value="{{(input.value$ | async)}}"/>
+</div>
+<div *ngIf="parameters.size > 0 || parameters.inline"   >
+	<span  *ngIf="parameters.labelIcon" class="fa fa-{{parameters.labelIcon}}"></span>
+    <span *ngIf="parameters.label">{{parameters.label}}</span>
+    <input class="form-control" (keyup)="onChange($event)" name="{{input.id}}" [style.width.%]="parameters.inputSize" value="{{(input.value$ | async)}}"/>
+</div>
