--- a/kervi_ui/web/src/app/page-header/page-header.component.html
+++ b/kervi_ui/web/src/app/page-header/page-header.component.html
@@ -1,5 +1,5 @@
 <li class="nav-item dropdown">
-	<a class="nav-link " data-toggle="dropdown"><i class="fa fa-bars fa-lg" aria-hidden="true"></i></a>
+	<a class="nav-link" title="Dashboards" style="padding-top:0;cursor: pointer" data-toggle="dropdown"><i class="fa fa-bars fa-lg" aria-hidden="true"></i></a>
 	<div class="dropdown-menu  multi-leve ul.nav.navbar-nav.no-collapse">
 			<!--<span class="dropdown-divider">&nbsp; Dashboards</span>-->
 			<div class="dropdown-submenu">
